==> eboxmaker/ebox_rtt/ebox/hardware/STM32F1xx/Peripherals/ebox_uart.cpp <==
#include "ebox_uart.h"
#include "rcc.h"
#include "nvic.h"
#include "stm32f1xx_ll_usart.h"

void    Uart::begin(uint32_t baud_rate, RxMode_t mode)
{
    Uart::begin(baud_rate, 8, 0, 1, mode);
}

void Uart::begin(uint32_t baud_rate, uint8_t data_bit, uint8_t parity, float stop_bit, RxMode_t mode)
{

    rcc_clock_cmd((uint32_t)_USARTx, ENABLE);
    this->mode = mode;

/* USER CODE END USART1_Init 1 */
  huart.Instance = _USARTx;
    hdma_rx.Instance = NULL;
//  huart.Init.BaudRate = 115200;
//  huart.Init.WordLength = UART_WORDLENGTH_8B;
//  huart.Init.StopBits = UART_STOPBITS_1;
//  huart.Init.Parity = UART_PARITY_NONE;
//  huart.Init.Mode = UART_MODE_TX_RX;
//  huart.Init.HwFlowCtl = UART_HWCONTROL_NONE;
//  huart.Init.OverSampling = UART_OVERSAMPLING_16;

    switch((uint32_t)_USARTx)
    {
#if USE_UART1
    case (uint32_t)USART1_BASE:
        hdma_rx.Instance = DMA1_Channel5;
        index = NUM_UART1;
        break;
#endif

#if USE_UART2
    case (uint32_t)USART2_BASE:
        hdma_rx.Instance = DMA1_Channel6;
        index = NUM_UART2;
        break;
#endif

#if USE_UART3
    case (uint32_t)USART3_BASE:
        hdma_rx.Instance = DMA1_Channel3;
        index = NUM_UART3;
        break;
#endif

#if defined (STM32F10X_HD)
#if USE_UART4
    case (uint32_t)UART4_BASE:
        index = NUM_UART4;
        this->mode = RxIt;
        break;
#endif

#if USE_UART5
    case (uint32_t)UART5_BASE:
        index = NUM_UART5;
        this->mode = RxIt;
        break;
#endif
#endif
    }

    _tx_buffer_size[index] = tx_buffer_size;
    _rx_buffer_size[index] = rx_buffer_size;

#ifdef UART_9_BIT
    _tx_ptr[index] = (uint16_t *)rt_malloc(_tx_buffer_size[index] * sizeof(uint16_t));
    _rx_ptr[index] = (uint16_t *)rt_malloc(_rx_buffer_size[index] * sizeof(uint16_t));
#else
    _tx_ptr[index] = (uint8_t *)rt_malloc(_tx_buffer_size[index] * sizeof(uint8_t));
    _rx_ptr[index] = (uint8_t *)rt_malloc(_rx_buffer_size[index] * sizeof(uint8_t));
#endif



    serial_irq_handler(index, Uart::_irq_handler, (uint32_t)this);

    huart.Init.BaudRate = baud_rate;

    switch(data_bit)
    {
    case 8:
        huart.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    case 9:
        huart.Init.WordLength = UART_WORDLENGTH_9B;
        break;
    default :
        huart.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    }
    switch(parity)
    {
    case 0:
        huart.Init.Parity = UART_PARITY_NONE;
        break;
    case 1:
        huart.Init.Parity = UART_PARITY_ODD;
        break;
    case 2:
        huart.Init.Parity = UART_PARITY_EVEN;
        break;
    default :
        huart.Init.Parity = UART_PARITY_NONE;
        break;
    }
    if(stop_bit == 1)
        huart.Init.StopBits = UART_STOPBITS_1;    
    else if(stop_bit == 2)
        huart.Init.StopBits = UART_STOPBITS_2;    
    else
        huart.Init.StopBits = UART_STOPBITS_1;   
    
    huart.Init.Mode = UART_MODE_TX_RX;
    huart.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    huart.Init.OverSampling = UART_OVERSAMPLING_16;
    if (HAL_UART_Init(&huart) != HAL_OK)
    {
    }

    if((mode == RxDMA) && (hdma_rx.Instance != NULL))
    {
        rcc_clock_cmd((uint32_t)hdma_rx.Instance,ENABLE);
        
        HAL_NVIC_SetPriority(DMA1_Channel5_IRQn, 0, 0);
        HAL_NVIC_DisableIRQ(DMA1_Channel5_IRQn);

        
        
        hdma_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
        hdma_rx.Init.PeriphInc = DMA_PINC_DISABLE;
        hdma_rx.Init.MemInc = DMA_MINC_ENABLE;
        hdma_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        hdma_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        hdma_rx.Init.Mode = DMA_CIRCULAR;
        hdma_rx.Init.Priority = DMA_PRIORITY_LOW;
        if (HAL_DMA_Init(&hdma_rx) != HAL_OK)
        {
        }
        __HAL_LINKDMA(&huart,hdmarx,hdma_rx);
        HAL_UART_Receive_DMA(&huart, _rx_ptr[index], _rx_buffer_size[index]);

    }

    _tx_pin->mode(AF_PP);
    _rx_pin->mode(INPUT);

    nvic(ENABLE, 0, 0);
    interrupt(RxIrq, ENABLE);
    interrupt(TxIrq, DISABLE);

    _is_inited = true;
}

void Uart::interrupt(IrqType type, FunctionalState enable)
{

    if(type == RxIrq)
    {
        __HAL_UART_ENABLE_IT(&huart,UART_IT_RXNE);
    }
    else if(type == TxIrq)
    {
        if(enable == ENABLE)
            __HAL_UART_ENABLE_IT(&huart,UART_IT_TXE);
        else
            __HAL_UART_DISABLE_IT(&huart,UART_IT_TXE);
    }

}

int Uart::peek(void)
{
    if ((_rx_buffer_size[index] - hdma_rx.Instance->CNDTR) == _rx_buffer_tail[index])
    {
        return -1;
    }
    else
    {
        return _rx_ptr[index][_rx_buffer_tail[index]];
    }
}

int Uart::available()
{
    if(mode == RxDMA)
        return ((unsigned int)(_rx_buffer_size[index] + (_rx_buffer_size[index] - hdma_rx.Instance->CNDTR) - _rx_buffer_tail[index])) % _rx_buffer_size[index];
    else
        return ((unsigned int)(_rx_buffer_size[index] + _rx_buffer_head[index] - _rx_buffer_tail[index])) % _rx_buffer_size[index];
}

int Uart::read()
{
    if(mode == RxDMA)
    {
        if (_rx_buffer_tail[index] == (_rx_buffer_size[index] - hdma_rx.Instance->CNDTR))
        {
            return -1;
        }
    }
    else
    {
        if (_rx_buffer_tail[index] == _rx_buffer_head[index])
        {
            return -1;
        }
    }
    int c = _rx_ptr[index][_rx_buffer_tail[index]];
    _rx_buffer_tail[index] = (_rx_buffer_tail[index] + 1) % _rx_buffer_size[index];
    return c;
}

void Uart::flush()
{
    uint8_t major, minor;
    interrupt(TxIrq, DISABLE); //期间必须关闭串口中断
    while(_tx_buffer_head[index] != _tx_buffer_tail[index] )
    {
        while(LL_USART_IsActiveFlag_TXE(_USARTx) == RESET);//单字节等待，等待寄存器空
        tx_bufferx_one(_USARTx, index);
    }
}

    void tx_bufferx_one(USART_TypeDef *uart, uint8_t index)
    {
        if (_tx_buffer_head[index] == _tx_buffer_tail[index])//如果空则直接返回
        {
            return;
        }
        unsigned char c = _tx_ptr[index][_tx_buffer_tail[index]];   // 取出字符
        _tx_buffer_tail[index] = (_tx_buffer_tail[index] + 1) % _tx_buffer_size[index];
        uart->DR = (c & (uint16_t)0x01FF);        
        if (_tx_buffer_head[index] == _tx_buffer_tail[index])//如果发送完所有数据
        {
            // Buffer empty, so disable interrupts
            LL_USART_DisableIT_TXE(uart);
        }
    }

    void USART1_IRQHandler(void)
    {
        if(LL_USART_IsActiveFlag_RXNE(USART1) == SET)
        {
            rx_buffer_one(USART1, NUM_UART1);
            irq_handler(serial_irq_ids[NUM_UART1], RxIrq);
            LL_USART_ClearFlag_RXNE(USART1);
        }
        if(LL_USART_IsActiveFlag_TXE(USART1) == SET)
        {
            tx_bufferx_one(USART1, NUM_UART1);
            irq_handler(serial_irq_ids[NUM_UART1], TxIrq);
        }

    }
